# SIGNUM

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: telegram-bot-CI.yaml  telegram-bot-backend-CI.yaml  telegram-bot-frontend-CI.yaml  telegram-bot-linting.yml
telegram-bot/backend/: main.py
telegram_bot/backend/: Dockerfile  config.py  main.py  pyproject.toml  pytest.ini
telegram_bot/backend/codewars/: models_user_statistic.py  urls.py  user_statistic.py
telegram_bot/backend/db/: collections.py  create_user.py  exeptions.py
telegram_bot/backend/db/crud/: common.py  users.py
telegram_bot/backend/db/models/: user.py
telegram_bot/backend/routers/: __init__.py  user.py
telegram_bot/backend/tests/: conftest.py
telegram_bot/backend/tests/routers/: test_user_router.py
telegram_bot/backend/tests/test_database/: test_db_consistanse.py  test_unit_crud.py
telegram_bot/backend/tests/test_routers/: test_unit_user_router.py
telegram_bot/frontend/: Dockerfile  Main.py  bot_answers.py  config.py  main.py  pyproject.toml  requirements.txt
tests_telegram_bot/: test_user_router.py
