[tool.poetry]
name = "signum"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.1"
requests = "^2.31.0"


[tool.poetry.group.frontend.dependencies]
aiogram = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
